--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Angular Standard Project Setup</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
-  <!-- <link rel="stylesheet" type="text/stylesheet" href="./assets/libraries/bootstrap.min.css"> -->
-  <link href="./assets/libraries/bootstrap.min.css" rel="stylesheet"/>
-  <link href="./assets/libraries/fontawesome-free-6.2.1-web/css/all.min.css" rel="stylesheet"/>
-  <link href="./assets/styles/index.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Angular | Standard Project Setup | Author - Saravanan S</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
+    <link href="./assets/libraries/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./assets/libraries/fontawesome-free-6.2.1-web/css/all.min.css" rel="stylesheet"/>
+    <link href="./assets/styles/index.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
 </html>
